--- a/templates/header.html
+++ b/templates/header.html
@@ -3,14 +3,14 @@
   <div class="container">
 
     <!-- 导航栏商标 -->
-    <a class="navbar-brand" href="#">我的博客</a>
+    <a class="navbar-brand" href="{% url 'article:article_list' %}">首页</a>
 
     <!-- 导航入口 -->
     <div>
       <ul class="navbar-nav">
         <!-- 条目 -->
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'article:article_list' %}">文章</a>
+          <a class="nav-link" href="{% url 'article:article_create' %}">写博客</a>
         </li>
         <!-- Django的 if 模板语句 -->
     {% if user.is_authenticated %}
@@ -20,7 +20,7 @@
               {{ user.username }}
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="{% url 'article:article_create' %}">写文章</a>
+                <a class="dropdown-item" href="{% url 'article:user_article_list' user.id%}">我的博客</a>
                 <a class="dropdown-item" href='{% url "userprofile:edit" user.id %}'>个人信息</a>
               <a class="dropdown-item" href="{%url 'userprofile:logout'%}">退出登录</a>
                 <a class="dropdown-item" href="#" onclick="user_delete()">删除用户</a>
