--- a/templates/header.html
+++ b/templates/header.html
@@ -23,21 +23,9 @@
                 <a class="dropdown-item" href="{% url 'article:user_article_list' user.id%}">我的博客</a>
                 <a class="dropdown-item" href='{% url "userprofile:edit" user.id %}'>个人信息</a>
               <a class="dropdown-item" href="{%url 'userprofile:logout'%}">退出登录</a>
-                <a class="dropdown-item" href="#" onclick="user_delete()">删除用户</a>
+                <!--<a class="dropdown-item" href="#" onclick="user_delete()">删除用户</a>-->
             </div>
         </li>
-          <script>
-        function user_delete() {
-            // 调用layer弹窗组件
-            layer.open({
-                title: "确认删除",
-                content: "确认删除用户资料吗？",
-                yes: function(index, layero) {
-                    location.href='{% url "userprofile:delete" user.id %}'
-                },
-            })
-        }
-    </script>
     <!-- 如果用户未登录，则显示 “登录” -->
     {% else %}
         <li class="nav-item">
