--- a/mysite/templates/blog/titles.html
+++ b/mysite/templates/blog/titles.html
@@ -2,17 +2,28 @@
 {% block title %}blog titles{% endblock %}
 {% block content %}
 <div class="row">
-	<div class="col-xs-12 col-md-8">
+	<!-- 这两个div标签中的内容是静态的-->
+    <div class="col-xs-12 col-md-6">
+		<h2 text-align="center">汉服</h2>
+		<img src="../static/images/gaohong.jpg" alt="logo" width="400px" height="300px">
+
+	</div>
+
+    <div class="nav navbar-nav">
+		<h2 text-align="center">亲亲</h2>
+		<img src="../static/images/gaohong1.jpg" alt="logo" width="300px">
+
+	</div>
+
+    <!-- 下面div标签中的内容是动态的-->
+    <div class="media col-md-8">
 		<ul>
 			{% for blog in blogs %}
-			<li><a href="{% url 'blog:blog_article' blog.id %}">{{ blog.title }}</a></li>
+            <!-- 每个动态显示的内容-->
+			<li><a href="{% url 'blog:blog_article' blog.id %}">{{ blog.id }}.{{ blog.title }}</a></li>
+                {{ blog.body }}
 			{% endfor %}
 		</ul>
-	</div>
-	<div class="col-xs-6 col-md-4">
-		<h2 text-align="center">今日</h2>
-		<a href="http://www.itpub.net/2019/09/20/3183/"><img src="../static/images/1312140.png" alt="logo" width="300px"></a>
-
 	</div>
 </div>
 {% endblock %}
